fix overlap

--- a/webapp/app/components/session-overview/component.scss
+++ b/webapp/app/components/session-overview/component.scss
@@ -10,7 +10,7 @@
         position: -webkit-sticky;
         position: sticky;
         top: 0px;
-        z-index: 1;
+        z-index: 2;
         background: white;
         border-bottom: 1px solid silver;
     }
